--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,14 @@ spring.jpa.properties.hibernate.format_sql=true
 server.port=8081
 
 
+spring.mail.host = smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.smtp.starttls.enable=true
+
+
 #spring.jpa.hibernate.ddl-auto=update komutu, Spring Boot ve Hibernate ile çal??an bir projede,
 #veritaban? tablolar?n?n otomatik olarak güncellenmesini sa?lar.
 
